# baseCamp

./: .env.example  .env.production.template  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  deployment-vps.md  design-notes.md  dev.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.md  requirements.txt  tech-stack.md  todo.md  validate_implementation.py  validate_syntax.py
demo/: README.md  automotive_airtable_config.json  automotive_demo_guide.md  automotive_scenarios.json  demo-setup.py  load-sample-data.py
docs/: API_DOCUMENTATION.md  PRODUCTION_DEPLOYMENT.md
frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/LeadForm/: LeadForm.tsx
frontend/src/components/QRCode/: QRCodeGenerator.tsx
frontend/src/components/UI/: Button.tsx  Input.tsx  Layout.tsx
frontend/src/hooks/: useBusinessStore.ts
frontend/src/pages/: FormPage.tsx  SuccessPage.tsx
frontend/src/services/: api.ts  businessConfig.ts  theme.ts
frontend/src/types/: index.ts
frontend/src/utils/: cn.ts  validation.ts
scripts/: generate-client-config.py  health-check.sh  provision-client.sh  setup-ssl.sh  setup-vps.sh  validate-production.py
src/: __init__.py  main.py
src/api/: __init__.py  intake.py  leads.py
src/config/: __init__.py  settings.py
src/services/: airtable_service.py  duplicate_service.py  llm_service.py  vector_service.py
test_chroma_db/: chroma.sqlite3
tests/: __init__.py  conftest.py  test_api.py  test_chromadb_comprehensive.py  test_chromadb_integration.py  test_duplicate_detection.py  test_integration.py  test_llm_integration.py  test_llm_performance.py  test_models.py  test_ollama_summary.py  test_prompt_validation.py  test_services.py
